Add Material UI search bar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,11 @@
   text-align: center;
 }
 
+.hero-body {
+  padding-top: 0.1rem;
+  padding-bottom: 3rem;
+}
+
 .card-container {
   display: flex;
   margin-top: 10%;
