--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 .toggle-search-container {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .header-title {
@@ -16,6 +17,13 @@
 .hero-body {
   padding-top: 0.3rem;
   padding-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .button {
+    width: 9rem;
+  }
 }
 
 .card-container {
