--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,7 @@
   justify-content: center;
   .card {
     width: 300px;
-    animation: zoomIn 400ms;
+    animation: zoomIn 1s;
 
     .card-content {
       display: flex;
@@ -46,9 +46,16 @@
     }
 
     .MuiCardMedia-img {
-      //   width: 200px;
       background-color: #ffd54e;
       border-radius: 5px;
+    }
+
+    .slide-right {
+      animation: slide-right 0.3s forwards;
+    }
+
+    .slide-left {
+      animation: slide-left 0.5s backwards;
     }
 
     .navigation {
@@ -96,5 +103,23 @@
   }
   50% {
     opcaity: 1;
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    transform: translateX(-900px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    transform: translateX(900px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
