--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,10 +15,8 @@
   }
 }
 
-.toggle-search-container {
-  display: flex;
-  justify-content: space-between;
-  width: 95%;
+.MuiInputBase-root {
+  padding-right: 0px;
 }
 
 .header-title {
