--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,11 +30,19 @@
 }
 
 .banner-body {
-  padding-top: 0.3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 0.3rem;
+  padding-left: 10px;
+  padding-right: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+
+  .toggle-search-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
 
   .button {
     width: 9rem;
