Add stats with bars

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,8 +44,11 @@
     width: 100%;
   }
 
-  .button {
+  .MuiButton-contained {
     width: 9rem;
+    background-color: 'red';
+    color: 'white';
+    background-color: #ff3d00;
   }
 }
 
