--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -15,6 +15,9 @@
     background-color: #433e47;
     color: white;
   }
+  .height-weight-container {
+    background-color: #9e9e9e;
+  }
 }
 
 .lightTheme {
@@ -27,5 +30,9 @@
 
   .banner-body {
     background: rgba(254, 254, 254, 0.8);
+  }
+
+  .height-weight-container {
+    background-color: #fdfdfd;
   }
 }
