--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,6 +48,9 @@
     width: 9rem;
     background-color: 'red';
     color: 'white';
-    background-color: #ff3d00;
+    background-color: #ffd54e;
+    align-self: flex-start;
+    margin-left: 0.7rem;
+    margin-bottom: 1rem;
   }
 }
