--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -9,7 +9,15 @@
   animation: zoomIn 500ms;
   display: flex;
   justify-content: space-between;
-  width: 60%;
+  width: 50rem;
+
+  .image-container {
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0 20px 0;
+  }
 }
 
 @keyframes zoomIn {
@@ -35,12 +43,12 @@
 }
 
 .info-bg {
-  //   background-color: #ffd54e;
   width: 400px;
   box-shadow: -1px 0 1px rgba(0, 0, 0, 0.24);
 
   .card-content {
     padding: 0;
+    width: 100%;
   }
 }
 
@@ -64,12 +72,11 @@
   }
 }
 .name {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.5rem;
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 2.3rem;
   margin-left: 15px;
   color: white;
   text-align: center;
-  font-weight: bold;
 }
 
 .card-bottom-content {
