--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -54,7 +54,6 @@
 
 .card-header-background {
   height: 100px;
-  width: 100%;
   //   box-shadow: 0 4px 1px rgba(0, 0, 0, 0.24), 0 8px 4px rgba(0, 0, 0, 0.12);
 }
 .ball-container {
@@ -133,4 +132,34 @@
       margin-right: 0.5rem;
     }
   }
+}
+
+/*********************************
+* MOBILE STYLES
+*********************************/
+
+.mobile-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mobile-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.info-bg-mobile {
+  width: 300px;
+  box-shadow: -1px 0 1px rgba(0, 0, 0, 0.24);
+  margin: 0 auto;
+  margin-bottom: 2rem;
+}
+
+.card-content {
+  padding: 0;
+}
+
+.nav-icon-mobile-light {
+  color: white;
 }
