--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -23,6 +23,19 @@
       display: flex;
       align-items: flex-end;
     }
+
+    .evolution {
+      display: flex;
+      justify-content: space-between;
+      width: 60%;
+      margin: 0 auto;
+    }
+
+    .evolved {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
   }
 }
 
