--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -11,7 +11,8 @@
     color: white;
   }
 
-  .card {
+  .card,
+  .mobile-card {
     background-color: #433e47;
     color: white;
   }
@@ -35,4 +36,12 @@
   .height-weight-container {
     background-color: #fdfdfd;
   }
+
+  .info-bg-mobile {
+    background-color: white;
+  }
+}
+
+.background-mobile {
+  height: 100%;
 }
